Reorganized spaces in code, fixed shifted <hr>

--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,8 @@ footer
     font-family: "SoDo Sans Semibold", Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px; 
     color:rgb(82, 82, 82); 
-    padding-left: 10%;
+    padding: 0px 5%;
 }
-
-
-
-
 
 /* NAV */
 .navbar-center svg
